# rend3

./: .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.APACHE  LICENSE.MIT  LICENSE.ZLIB  Makefile.toml  README.md  README.tpl  after-wgpu-upgrade-gpu.tracy  after-wgpu-upgrade.tracy  before-wgpu-upgrade.tracy  build.bash  deny.toml  release.toml  vk_layer_settings.txt
examples/: Cargo.toml  README.md
examples/animation/: Cargo.toml  README.md
examples/animation/resources/: LICENSE  scene.gltf
examples/animation/src/: lib.rs  main.rs
examples/cube/: Cargo.toml  README.md
examples/cube-no-framework/: Cargo.toml  README.md
examples/cube-no-framework/src/: main.rs
examples/cube/src/: lib.rs  main.rs
examples/egui/: Cargo.toml
examples/egui/src/: main.rs
examples/gltf/: Cargo.toml  README.md  data.glb
examples/gltf/src/: main.rs
examples/imgui/: Cargo.toml  README.md
examples/imgui/src/: main.rs
examples/resources/: index.html
examples/scene-viewer/: Cargo.toml  README.md
examples/scene-viewer/data/: Concrete-Displacement.basis  Moss-Albedo.basis  Moss-Displacement.basis  Moss-Roughness.basis  scene.blend  scene.gltf  skybox.basis  suzanne.mtl
examples/scene-viewer/src/: lib.rs  main.rs  platform.rs
examples/skinning/: Cargo.toml  README.md
examples/skinning/src/: lib.rs  main.rs
examples/src/: lib.rs  main.rs  tests.rs
examples/src/animation/: mod.rs
examples/src/cube/: mod.rs
examples/src/cube_no_framework/: Cargo.toml  mod.rs
examples/src/egui/: mod.rs
examples/src/scene_viewer/: mod.rs
examples/src/skinning/: README.md  mod.rs
examples/src/static_gltf/: mod.rs
examples/src/textured_quad/: Cargo.toml  README.md  mod.rs
examples/static-gltf/: Cargo.toml  README.md  repro.glb
examples/static-gltf/src/: main.rs
examples/textured-quad/: Cargo.toml
examples/textured-quad/src/: main.rs
rend3/: Cargo.toml
rend3-anim/: Cargo.toml
rend3-anim/src/: lib.rs
rend3-egui/: Cargo.toml
rend3-egui/src/: egui.wgsl  lib.rs
rend3-framework/: Cargo.toml
rend3-framework/src/: assets.rs  grab.rs  lib.rs  resize_observer.rs
rend3-framework/src/grab/: native.rs  wasm.rs
rend3-gltf/: Cargo.toml
rend3-gltf/src/: lib.rs
rend3-imgui/: Cargo.toml
rend3-imgui/src/: lib.rs
rend3-list/: Cargo.toml
rend3-list/src/: lib.rs
rend3-pbr/: Cargo.toml
rend3-pbr-bake/: Cargo.toml
rend3-pbr-bake/src/: lib.rs
rend3-pbr/shaders/spirv/: blit-srgb.frag.spv  blit.frag.spv  blit.vert.spv  cull-atomic-cull.comp.spv  cull-prefix-cull.comp.spv  cull-prefix-output.comp.spv  cull-prefix-sum.comp.spv  cull.comp.spv  depth-baking.vert.gpu.spv  depth-cutout.frag.cpu.spv  depth-cutout.frag.gpu.spv  depth-opaque.frag.cpu.spv  depth-opaque.frag.gpu.spv  depth.frag.cpu.spv  depth.frag.gpu.spv  depth.vert.cpu.spv  depth.vert.gpu.spv  opaque-baking.vert.cpu.spv  opaque-baking.vert.gpu.spv  opaque.frag.cpu.spv  opaque.frag.gpu.spv  opaque.vert.cpu.spv  opaque.vert.gpu.spv  skybox.frag.spv  skybox.vert.spv
rend3-pbr/shaders/src/: blit.frag  cull.comp  depth.frag  depth.vert  math.glsl  opaque.frag  opaque.vert  skybox.frag  structures.glsl
rend3-pbr/shaders/wgsl/: blit-linear.frag.wgsl  blit-srgb.frag.wgsl  blit.vert.wgsl  cull-prefix-cull.comp.wgsl  cull-prefix-output.comp.wgsl  cull-prefix-sum.comp.wgsl  depth-cutout.frag.cpu.wgsl  depth.vert.cpu.wgsl  opaque-baking.vert.cpu.wgsl  opaque.frag.cpu.wgsl  opaque.vert.cpu.wgsl  skybox.frag.wgsl  skybox.vert.wgsl
rend3-pbr/src/: directional.rs  forward.rs  lib.rs  material.rs  opaque.rs  skybox.rs  tonemapping.rs  uniforms.rs  utils.rs  vertex.rs
rend3-pbr/src/common/: depth_pass.rs  forward_pass.rs  interfaces.rs  mod.rs  opaque_pass.rs  samplers.rs  shaders.rs  skybox_pass.rs  sorting.rs
rend3-pbr/src/culling/: cpu.rs  gpu.rs  mod.rs
rend3-pbr/src/shaders/: mod.rs
rend3-pp/: Cargo.toml
rend3-routine/: Cargo.toml
rend3-routine/shaders/spirv/: blit-linear.frag.spv  blit-srgb.frag.spv  blit.vert.spv  cull-atomic-cull.comp.spv  cull-prefix-cull.comp.spv  cull-prefix-output.comp.spv  cull-prefix-sum.comp.spv  depth-cutout.frag.cpu.spv  depth-cutout.frag.gpu.spv  depth-opaque.frag.cpu.spv  depth-opaque.frag.gpu.spv  depth.vert.cpu.spv  depth.vert.gpu.spv  opaque-baking.vert.cpu.spv  opaque-baking.vert.gpu.spv  opaque.frag.cpu.spv  opaque.frag.gpu.spv  opaque.vert.cpu.spv  opaque.vert.gpu.spv  skybox.frag.spv  skybox.vert.spv
rend3-routine/shaders/src/: blit.frag  blit.wgsl  cull.comp  cull.wgsl  depth.frag  depth.vert  depth.wgsl  hi_z.wgsl  material.wgsl  math.glsl  opaque.frag  opaque.vert  opaque.wgsl  resolve_depth_min.wgsl  skinning.wgsl  skybox.wgsl  structures.glsl  structures.wgsl  structures_object.wgsl  uniform_prep.wgsl
rend3-routine/src/: base.rs  clear.rs  depth.rs  forward.rs  hi_z.rs  lib.rs  material.rs  pbr.rs  pre_cull.rs  shaders.rs  shadow.rs  skinning.rs  skybox.rs  tonemapping.rs  uniforms.rs  utils.rs
rend3-test/: Cargo.toml
rend3-test/src/: helpers.rs  lib.rs  runner.rs  threshold.rs
rend3-test/tests/: msaa.rs  object.rs  root.rs  shadow.rs  simple.rs
rend3-types/: Cargo.toml
rend3-types/src/: attribute.rs  lib.rs
rend3/shaders/: blit.frag  buffer_copier.wgsl  copy_offset.comp  cull.comp  depth.frag  depth.vert  lighting.glsl  math.glsl  mipmap.wgsl  opaque.frag  opaque.vert  post_cull.comp  pre_cull.comp  prefix_sum.comp  scatter_copy.wgsl  skybox.frag  structures.glsl  vertex_attributes.wgsl  vertex_attributes_store.wgsl
rend3/shaders/src/: blit.frag  (+10 more)
rend3/src/: bind_merge.rs  builder.rs  datatypes.rs  graph.rs  instruction.rs  jobs.rs  lib.rs  list.rs  mode.rs  options.rs  output.rs  profile.rs  registry.rs  routine.rs  setup.rs  shader.rs  statistics.rs  surface.rs  tls.rs
renderer/: Cargo.toml
renderer/src/: datatypes.rs  instruction.rs  lib.rs  registry.rs
scene-viewer/: Cargo.toml
scene-viewer/data/: Concrete-Albedo.basis  Concrete-AmbientOcclusion.basis  Concrete-Normal.basis  Concrete-Roughness.basis  Moss-AmbientOcclusion.basis  Moss-Normal.basis  cube.mtl
scene-viewer/src/: main.rs
(+204 files in other folders)
