[workspace]
resolver = "2"
members = [
    "examples/animation",
    "examples/cube",
    "examples/cube-no-framework",
    "examples/egui",
    "examples/imgui",
    "examples/scene-viewer",
    "examples/skinning",
    "examples/static-gltf",
    "examples/textured-quad",
    "rend3",
    "rend3-anim",
    "rend3-egui",
    "rend3-framework",
    "rend3-gltf",
    "rend3-imgui",
    "rend3-routine",
    "rend3-types"
]

[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.dev-release]
inherits = "dev"

[profile.dev-release.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = "thin"

[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "8063edc6482cfc828895ec0feaa446767fecc510" }
wgpu-core = { git = "https://github.com/gfx-rs/wgpu.git", rev = "8063edc6482cfc828895ec0feaa446767fecc510" }
wgpu-hal = { git = "https://github.com/gfx-rs/wgpu.git", rev = "8063edc6482cfc828895ec0feaa446767fecc510" }
wgpu-types = { git = "https://github.com/gfx-rs/wgpu.git", rev = "8063edc6482cfc828895ec0feaa446767fecc510" }
# wgpu = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "1b060b87ffa77211412a1f9efbe02fe2b647b01a" }
# wgpu-core = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "1b060b87ffa77211412a1f9efbe02fe2b647b01a" }
# wgpu-hal = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "1b060b87ffa77211412a1f9efbe02fe2b647b01a" }
# wgpu-types = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "1b060b87ffa77211412a1f9efbe02fe2b647b01a" }
# wgpu = { path = "../wgpu/wgpu" }
# wgpu-core = { path = "../wgpu/wgpu-core" }
# wgpu-hal = { path = "../wgpu/wgpu-hal" }
# wgpu-types = { path = "../wgpu/wgpu-types" }
wgpu-profiler = { git = "https://github.com/cwfitzgerald/wgpu-profiler.git", rev = "152fd0d4ebcb31fb07d338a39538658f03c389fc" }
profiling = { git = "https://github.com/aclysma/profiling.git", rev = "59fc51454c9a1e086289363ba1f26ab99626f6dd" }
tracy-client = { git = "https://github.com/cwfitzgerald/rust_tracy_client.git", rev = "cdb6e034989cd645ce26f04901b29c183b5dfd9d" }
