[workspace]
resolver = "2"
members = [
    "examples/animation",
    "examples/cube",
    "examples/cube-no-framework",
    "examples/egui",
    "examples/imgui",
    "examples/scene-viewer",
    "examples/skinning",
    "examples/static-gltf",
    "examples/textured-quad",
    "rend3",
    "rend3-anim",
    "rend3-egui",
    "rend3-framework",
    "rend3-gltf",
    "rend3-imgui",
    "rend3-routine",
    "rend3-types"
]

[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.dev-release]
inherits = "dev"

[profile.dev-release.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = "thin"

[patch.crates-io]
# wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "f42342bbbfd9d7ebd61745acccc0669fc0e064d2" }
# wgpu-core = { git = "https://github.com/gfx-rs/wgpu.git", rev = "f42342bbbfd9d7ebd61745acccc0669fc0e064d2" }
# wgpu-hal = { git = "https://github.com/gfx-rs/wgpu.git", rev = "f42342bbbfd9d7ebd61745acccc0669fc0e064d2" }
# wgpu-types = { git = "https://github.com/gfx-rs/wgpu.git", rev = "f42342bbbfd9d7ebd61745acccc0669fc0e064d2" }
# wgpu = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "bda861f77e0ca0b97697850ad19d19a8b8f1cc9c" }
# wgpu-core = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "bda861f77e0ca0b97697850ad19d19a8b8f1cc9c" }
# wgpu-hal = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "bda861f77e0ca0b97697850ad19d19a8b8f1cc9c" }
# wgpu-types = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "bda861f77e0ca0b97697850ad19d19a8b8f1cc9c" }
# wgpu = { path = "../wgpu/wgpu" }
# wgpu-core = { path = "../wgpu/wgpu-core" }
# wgpu-hal = { path = "../wgpu/wgpu-hal" }
# wgpu-types = { path = "../wgpu/wgpu-types" }
