[workspace]
resolver = "2"
members = [
    "examples/animation",
    "examples/cube",
    "examples/cube-no-framework",
    "examples/egui",
    "examples/imgui",
    "examples/scene-viewer",
    "examples/skinning",
    "examples/static-gltf",
    "examples/textured-quad",
    "rend3",
    "rend3-anim",
    "rend3-egui",
    "rend3-framework",
    "rend3-gltf",
    "rend3-imgui",
    "rend3-routine",
    "rend3-types"
]

[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.dev-release]
inherits = "dev"

[profile.dev-release.package."*"]
opt-level = 3

[profile.release]
debug = true
lto = "thin"

[patch.crates-io]
# wgpu = { git = "https://github.com/gfx-rs/wgpu.git", rev = "fac4731288117d951d0944d96cf0b00fa006dd6c" }
# wgpu-core = { git = "https://github.com/gfx-rs/wgpu.git", rev = "fac4731288117d951d0944d96cf0b00fa006dd6c" }
# wgpu-hal = { git = "https://github.com/gfx-rs/wgpu.git", rev = "fac4731288117d951d0944d96cf0b00fa006dd6c" }
# wgpu-types = { git = "https://github.com/gfx-rs/wgpu.git", rev = "fac4731288117d951d0944d96cf0b00fa006dd6c" }
# wgpu = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "bda861f77e0ca0b97697850ad19d19a8b8f1cc9c" }
# wgpu-core = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "bda861f77e0ca0b97697850ad19d19a8b8f1cc9c" }
# wgpu-hal = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "bda861f77e0ca0b97697850ad19d19a8b8f1cc9c" }
# wgpu-types = { git = "https://github.com/cwfitzgerald/wgpu.git", rev = "bda861f77e0ca0b97697850ad19d19a8b8f1cc9c" }
# wgpu = { path = "../wgpu/wgpu" }
# wgpu-core = { path = "../wgpu/wgpu-core" }
# wgpu-hal = { path = "../wgpu/wgpu-hal" }
# wgpu-types = { path = "../wgpu/wgpu-types" }

wasm-bindgen = { git = "https://github.com/Rob2309/wasm-bindgen/", branch = "wasi-abi" }
