[package]
name = "rend3-anim"
version = "0.3.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "Skeletal animation playback utilities for rend3 rendering library."
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "animation", "rend3", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine", "wasm"]
rust-version = "1.71"

[dependencies]
itertools = "0.12"
rend3 = { version = "^0.3.0", path = "../rend3" }
rend3-routine = { version = "^0.3.0", path = "../rend3-routine" }
rend3-gltf = { version = "^0.3.0", path = "../rend3-gltf" }
