[package]
name = "rend3-framework"
version = "0.2.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "Simple framework for making rend3 applications"
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "gpu", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cfg-if = "1"
glam = "0.20"
log = "0.4"
parking_lot = "0.11"
profiling = { version = "1", default-features = false }
rend3 = { version = "0.2.0", path = "../rend3" }
rend3-routine = { version = "0.2.0", path = "../rend3-routine" }
thiserror = { version = "1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# logging
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
pollster = "0.2"
winit = "0.25"

# mio-misc broke semver in 1.3.2, so lock us at no larger than 1.2.2, the latest release
mio-misc = ">=1.0.0, <=2.0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
js-sys = "0.3"
reqwest = "0.11"
once_cell = "1.8"
wasm-bindgen = "=0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
winit = { version = "0.25", features = ["web-sys"] }
