[package]
name = "rend3-framework"
version = "0.2.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "Simple framework for making rend3 applications"
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "rend3", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine"]
rust-version = "1.57"

[dependencies]
anyhow = "1"
cfg-if = "1"
glam = "0.20"
log = "0.4"
parking_lot = "0.11"
profiling = { version = "1", default-features = false }
rend3 = { version = "0.2.0", path = "../rend3" }
rend3-routine = { version = "0.2.0", path = "../rend3-routine" }
thiserror = { version = "1" }
winit = "0.26"
wgpu = "0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# logging
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
pollster = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
js-sys = "0.3"
reqwest = "0.11"
once_cell = "1.8"
wasm-bindgen = "=0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.5"
