[package]
name = "rend3-framework"
version = "0.3.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "Simple framework for making applications with the rend3 rendering library."
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "rend3", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine", "wasm"]
rust-version = "1.71"

[dependencies]
anyhow = "1"
cfg-if = "1"
glam = "0.24"
log = "0.4"
parking_lot = "0.12"
profiling = { version = "1", default-features = false }
rend3 = { version = "0.3.0", path = "../rend3" }
rend3-routine = { version = "0.3.0", path = "../rend3-routine" }
thiserror = { version = "1" }
winit = "0.28"
wgpu = "0.16.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# logging
env_logger = { version = "0.10", default-features = false, features = ["auto-color", "humantime"] }
pollster = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
reqwest = "0.11"
once_cell = "1.8"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"
