[package]
name = "rend3-gltf"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "gltf scene and model loader for rend3"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "gltf", "loading", "rend3"]
categories = ["game-development", "graphics", "parser-implementations", "rendering", "rendering::engine"]

[features]
default = ["image/default"]

[dependencies]
arrayvec = "0.7"
base64 = "0.13"
glam = "0.18"
gltf = { version = "0.16", default-features = false, features = ["KHR_lights_punctual", "KHR_texture_transform", "KHR_materials_unlit", "extras", "names", "utils"] }
image = { version = "0.23", default-features = false }
log = "0.4"
rend3 = { version = "^0.1.0", path = "../rend3" }
rend3-pbr = { version = "^0.1.0", path = "../rend3-pbr" }
rustc-hash = "1"
thiserror = "1"

[dev-dependencies]
pollster = "0.2"
