[package]
name = "rend3-gltf"
version = "0.3.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "gltf scene and model loader for the rend3 rendering library."
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "rend3", "gltf", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine", "wasm"]
rust-version = "1.57"

[features]
default = ["ddsfile", "ktx2"]

[dependencies]
arrayvec = "0.7"
base64 = "0.13"
bytemuck = "1"
ddsfile = { version = "0.5", optional = true }
float-ord = "0.3.2"
glam = "0.20.0"
gltf = { version = "1.0", default-features = false, features = ["KHR_lights_punctual", "KHR_texture_transform", "KHR_materials_unlit", "extras", "names", "utils"] }
image = { version = "0.24", default-features = false }
ktx2 = { version = "0.3", optional = true }
log = "0.4"
profiling = {version = "1", default-features = false }
rend3 = { version = "^0.3.0", path = "../rend3" }
rend3-routine = { version = "^0.3.0", path = "../rend3-routine" }
rustc-hash = "1"
thiserror = "1"

[dev-dependencies]
pollster = "0.2"
