[package]
name = "rend3-list"
version = "0.0.4"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "default renderlist rend3"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "gpu", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine"]

[dependencies]
rend3 = { version = "^0.0.4", path = "../rend3" }
