[package]
name = "rend3-pbr-bake"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "PBR light baking RenderRoutine for rend3"
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "gpu", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine"] 

[dependencies]
flume = "0.10"
glam = "0.19"
profiling = {version = "1", default-features = false }
rend3 = { version = "^0.1.0", path = "../rend3" }
rend3-pbr = { version = "^0.1.0", path = "../rend3-pbr" }
wgpu = { version = "0.10", features = ["spirv"] }
