[package]
name = "rend3-pbr-bake"
version = "0.2.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "PBR light baking RenderRoutine for rend3"
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "gpu", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine"]
publish = false

[dependencies]
flume = "0.10"
glam = "0.20"
profiling = {version = "1", default-features = false }
rend3 = { version = "^0.2.0", path = "../rend3" }
rend3-pbr = { version = "^0.2.0", path = "../rend3-pbr" }
wgpu = { version = "0.11" }
