[package]
name = "rend3-pbr"
version = "0.0.6"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "PBR Render Routine for Rend3"
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "gpu", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine"]

[dependencies]
arrayvec = "0.7"
bytemuck = "1"
glam = { version = "0.18", features = ["bytemuck"] }
include_dir = "0.6"
log = "0.4"
parking_lot = { version = "0.11" }
profiling = {version = "1", default-features = false }
ordered-float = "2"
rend3 = { version = "^0.0.6", path = "../rend3" }
wgpu = { version = "0.10", features = ["trace", "spirv", "webgl"] }
wgpu-profiler = { version = "0.6", git = "https://github.com/Wumpf/wgpu-profiler.git", rev = "a39653c398f40cf29ef43a0bcd29ce8f64bfa262" }
