[package]
name = "rend3-routine"
version = "0.2.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "Render Routines for rend3"
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "rend3", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine"]
rust-version = "1.57"

[dependencies]
arrayvec = "0.7"
bitflags = "1"
bytemuck = "1"
flume = "0.10"
glam = { version = "0.20.0", features = ["bytemuck"] }
include_dir = "0.7.0"
log = "0.4"
ordered-float = "2"
parking_lot = "0.11.2"
profiling = {version = "1", default-features = false }
rend3 = { version = "^0.2.0", path = "../rend3" }
wgpu = "0.12"
wgpu-profiler = "0.8.0"
