[package]
name = "rend3-routine"
version = "0.3.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "Customizable Render Routines for the rend3 rendering library."
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "rend3", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine", "wasm"]
rust-version = "1.65"

[dependencies]
arrayvec = "0.7"
bitflags = "1"
bytemuck = "1"
encase = { version = "0.6.1", features = ["glam"] }
flume = "0.10"
glam = { version = "0.24.0", features = ["bytemuck"] }
log = "0.4"
ordered-float = "3"
parking_lot = "0.12"
profiling = {version = "1", default-features = false }
rend3 = { version = "^0.3.0", path = "../rend3" }
rust-embed = { version = "6", features = ["interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
wgpu = "0.15"
wgpu-profiler = "0.11.0"

[dev-dependencies]
codespan-reporting = "0.11"
naga = { version = "0.11", features = ["wgsl-in"] }
serde_json = { version = "1" }
