[package]
name = "rend3-types"
version = "0.3.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "Type definitions for the rend3 rendering library."
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "rend3", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine", "wasm"]
rust-version = "1.57"

[dependencies]
bitflags = "1"
glam = "0.21.1"
thiserror = "1"
wgt = { package = "wgpu-types", version = "0.12" }
