[package]
name = "rend3-types"
version = "0.3.0"
authors = ["The rend3 Developers"]
edition = "2021"
description = "Type definitions for the rend3 rendering library."
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "rend3", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine", "wasm"]
rust-version = "1.71"

[dependencies]
bitflags = "2"
bytemuck = { version = "1", features = ["min_const_generics"] }
cfg-if = "1"
encase = { version = "0.6", features = ["glam"] }
glam = { version = "0.24", features = ["bytemuck"] }
list-any = "0.2"
once_cell = "1"
thiserror = "1"
wgt = { package = "wgpu-types", version = "0.18" }
