[package]
name = "rend3"
version = "0.1.1"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "Easy to use, customizable, efficient 3D renderer library built on wgpu."
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/rend3"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = ["3d", "graphics", "gpu", "renderer", "wgpu"]
categories = ["game-development", "graphics", "rendering", "rendering::engine"]

[package.metadata.release]
disable-tag = false
tag-prefix = ""
pre-release-hook = ["cargo", "readme", "-o", "../README.md", "-t", "../README.tpl"]
[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "rend3 = \"[a-z0-9\\.-]+\""
replace = "rend3 = \"{{version}}\""
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "\\[Unreleased\\]\\(#unreleased\\)"
replace = "[Unreleased](#unreleased)\n- [v{{version}}](#v{{version}})"
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "\\[v([0-9+])\\.([0-9+])\\.([0-9+])\\]\\(#v[0-9\\.]+\\)"
replace = "[v$1.$2.$3](#v$1$2$3)"
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "## Unreleased"
replace = "## Unreleased\n\n## v{{version}}\n\nReleased {{date}}"
[[package.metadata.release.pre-release-replacements]]
file = "../CHANGELOG.md"
search = "\\[Unreleased\\]\\(https://github.com/BVE-Reborn/rend3/compare/v([a-z0-9.-]+)\\.\\.\\.HEAD\\)"
replace = "[Unreleased](https://github.com/BVE-Reborn/rend3/compare/v{{version}}...HEAD)\n- [v{{version}}](https://github.com/BVE-Reborn/rend3/compare/v$1...v{{version}})"

[dependencies]
arrayvec = "0.7"
bitflags = "1"
bytemuck = "1"
flume = "0.10"
glam = { version = "0.18", features = ["bytemuck"] }
indexmap = "1"
log = "0.4"
parking_lot = { version = "0.11" }
profiling = {version = "1", default-features = false }
range-alloc = "0.1"
rend3-types = { version = "^0.1.0", path = "../rend3-types" }
rustc-hash = "1"
smallvec = "1"
smartstring = "0.2"
thiserror = "1"
wgpu = { version = "0.10", features = ["trace", "spirv", "webgl"] }
wgpu-profiler = "0.6.1"

# not direct deps, but force new versions
wgpu-core = "0.10.3"
wgpu-hal = "0.10.7"
